# camry

./: .gitattributes  .gitignore  README.md  build-tag-and-push.sh  build.sh  docker-compose.yaml  docker-compose.yml  generate-stubs.sh  go.mod  go.sum  make-migrations.sh  migrate.sh  run-env.sh  run.sh
cmd/: main.go
cmd/api/: main.go
cmd/scratch/: main.go  test_response.json
cmd/segment_producer/: main.go
cmd/stream_producer/: main.go
database/migrations/: 00001_initial.down.sql  00001_initial.up.sql  00002_more_detection_stuff.down.sql  00002_more_detection_stuff.up.sql  00003_migrate_claim_system.down.sql  00003_migrate_claim_system.up.sql  00003_video_with_seen_person.down.sql  00003_video_with_seen_person.up.sql
docker/api/: Dockerfile
docker/frontend/: default.conf
docker/object-detector/: Dockerfile  Dockerfile.dockerignore
docker/object-detector-v2/: Dockerfile  Dockerfile.dockerignore  Dockerfile.new  Dockerfile.sm30  build.sh
docker/segment-producer/: Dockerfile
docker/stream-producer/: Dockerfile
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.ts  config.ts  helpers.test.ts  helpers.ts  index.tsx  (+1 more)
internal/: helpers.go
object_detector/: README.md  __main__.py  object_detector.py  requirements.txt  setup.py  test.py
object_detector_v2/: .gitignore  Cargo.toml  build.sh  people-r-people.cfg
object_detector_v2/.cargo/: config.toml
object_detector_v2/src/: api_client.rs  api_types.rs  main.rs
schema/: openapi.json
scratch/: generate_events.sql
(+193 files in other folders)
