[package]
name = "object-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
ffmpeg = { package = "ffmpeg-next", version = "8.0.0" }
itertools = "0.14.0"
oas3-gen-support = "0.22.2"
opencv = { version = "0.97.2", features = ["clang-runtime"] }
reqwest = { version = "0.12.25", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similari = "0.26.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
uuid = "1.19.0"
validator = { version = "0.19", features = ["derive"] }
